# bbf-cwmp-usp-mcp

./: README.md  indexer.py  main.py  pyproject.toml  server.py
.claude-plugin/: marketplace.json  plugin.json
.claude/context/analysis/: 2026-03-16-bbf-github-source-of-truth.md  2026-03-16-onboarding-init-fetch-xmls.md
.claude/context/plans/: 2026-03-16-bbf-fetcher.md  2026-03-16-new-indexer-server.md  2026-03-16-xml-data-model-parser.md
.serena/: project.yml
.serena/memories/architecture/: bbf-repos-structure.md  current-state.md
plugins/bbf-cwmp-usp/: .gitignore  .mcp.json  README.md  bbf_fetcher.py  indexer.py  pyproject.toml  server.py  xml_parser.py
plugins/bbf-cwmp-usp/.claude-plugin/: plugin.json
plugins/bbf-cwmp-usp/data/vector_db/3c192fb1-8567-4853-a9c0-74a017a9ef9e/: index_metadata.pickle
plugins/bbf-cwmp-usp/data/vector_db/bf62135a-d35a-43d0-88d8-ea8183bc0b30/: index_metadata.pickle
plugins/bbf-cwmp-usp/skills/broadband-forum-protocols/: SKILL.md
plugins/bbf-cwmp-usp/skills/broadband-forum-protocols/references/: setup.md
plugins/bbf-cwmp-usp/tests/: test_indexer.py
plugins/statusline-monitor/.claude-plugin/: plugin.json
plugins/statusline-monitor/commands/: remove-statusline.md  setup-statusline.md
plugins/statusline-monitor/scripts/: statusline.js
skills/broadband-forum-protocols/: SKILL.md
tests/: test_bbf_fetcher.py  test_server.py  test_xml_parser.py
