[project]
name = "tr-mcp-server"
version = "1.0.0"
description = "MCP server for TR-069 (CWMP) and TR-369 (USP) protocol documentation with semantic search"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Stechs", email = "aprincipe@stechs.com"}
]
keywords = ["tr-069", "tr-369", "cwmp", "usp", "broadband-forum", "mcp", "documentation"]
license = {text = "MIT"}

dependencies = [
    "chromadb>=1.2.1",
    "docling>=2.58.0",
    "mcp>=1.16.0",
    "sentence-transformers>=5.1.2",
    "protobuf>=5.29.0",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/stechs/tr-mcp-server"
Documentation = "https://github.com/stechs/tr-mcp-server#readme"
Repository = "https://github.com/stechs/tr-mcp-server"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
